--- a/ProjetoBackend/Views/ItensVendas/Create.cshtml
+++ b/ProjetoBackend/Views/ItensVendas/Create.cshtml
@@ -3,66 +3,68 @@
 @{
     ViewData["Title"] = "Criar";
 }
+<div class="container">
 
-<h1>Item da Venda</h1>
+    <h1>Item da Venda</h1>
 
-<hr />
-<div class="row justify-content-center">
-    <div class="col-md-8">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="row">
-                <div class="col-12 col-md-4">
-                    <div class="form-group">
-                        <label asp-for="VendaId" class="control-label"></label>
-                        <input asp-for="VendaId" class="form-control" value=@ViewData["VendaId"] />
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="form-group">
+                            <label asp-for="VendaId" class="control-label"></label>
+                            <input asp-for="VendaId" class="form-control" value=@ViewData["VendaId"] />
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="form-group">
+                            <label asp-for="Quantidade" class="control-label"></label>
+                            <input asp-for="Quantidade" class="form-control" id="Quantidade" />
+                            <span asp-validation-for="Quantidade" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ProdutoId" class="control-label"></label>
+                            <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId" id="produtoId"></select>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
-                    <div class="form-group">
-                        <label asp-for="Quantidade" class="control-label"></label>
-                        <input asp-for="Quantidade" class="form-control" id="Quantidade" />
-                        <span asp-validation-for="Quantidade" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ValorUnitario" class="control-label"></label>
+                            <input asp-for="ValorUnitario" class="form-control" id="ValorUnitario" />
+                            <span asp-validation-for="ValorUnitario" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ValorTotal" class="control-label"></label>
+                            <input asp-for="ValorTotal" class="form-control" id="ValorTotal" />
+                            <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md">
-                    <div class="form-group">
-                        <label asp-for="ProdutoId" class="control-label"></label>
-                        <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId" id="produtoId"></select>
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                        <div class="btn w-100 btn-outline-danger">
+                            <a asp-action="Index" class="text-decoration-none text-danger ">Cancelar</a>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md">
-                    <div class="form-group">
-                        <label asp-for="ValorUnitario" class="control-label"></label>
-                        <input asp-for="ValorUnitario" class="form-control" id="ValorUnitario" />
-                        <span asp-validation-for="ValorUnitario" class="text-danger"></span>
-                    </div>
-                </div>
-                <div class="col-12 col-md">
-                    <div class="form-group">
-                        <label asp-for="ValorTotal" class="control-label"></label>
-                        <input asp-for="ValorTotal" class="form-control" id="ValorTotal" />
-                        <span asp-validation-for="ValorTotal" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md mt-2">
-                    <div class="btn w-100 btn-outline-danger">
-                        <a asp-action="Index" class="text-decoration-none text-danger ">Cancelar</a>
-                    </div>
-                </div>
-                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-                <div class="col col-md mt-2">
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col col-md mt-2">
 
-                    <div class="form-group">
-                        <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        <div class="form-group">
+                            <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        </div>
                     </div>
                 </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 
