--- a/ProjetoBackend/Views/Servicos/Index.cshtml
+++ b/ProjetoBackend/Views/Servicos/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProjetoBackend.Models.Servico>
 
 @{
-    ViewData["Title"] = "Cadastrar Serviços";
+    ViewData["Title"] = "Serviços";
 }
 <div class="container">
 
