--- a/ProjetoBackend/Views/ServicosVendas/Index.cshtml
+++ b/ProjetoBackend/Views/ServicosVendas/Index.cshtml
@@ -3,46 +3,41 @@
 @{
     ViewData["Title"] = "Serviços Vendidos";
 }
+<div class="container">
 
-<h1>Vendas</h1>
+    <h1>Vendas</h1>
 
-<p>
-    <div class="btn btn-lg" style=" background:#DC5F00">
-        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
-    </div>
-</p>
-<table class="table table-dark table-responsive">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Servico)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Venda)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <p>
+        <a asp-action="Create" class="text-decoration-none text-light btn-1 btn btn-lg">Cadastrar</a>
+    </p>
+    <table class="table table-dark table-responsive">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Servico.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Venda.VendaId)
-                </td>
-                <td>
-                    <div class=" btn btn-outline-primary">
-                        <a asp-action="Edit" asp-route-id="@item.ServicoId" class="text-primary text-decoration-none">Editar</a>
-                    </div>
-
-                    <div class="btn btn-outline-danger">
-                        <a asp-action="Delete" asp-route-id="@item.ServicoId" class="text-danger text-decoration-none">Delete</a>
-                    </div>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Servico)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Venda)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Servico.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Venda.VendaId)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@item.ServicoId" class="text-primary text-decoration-none btn btn-outline-primary">Editar</a>
+                        <a asp-action="Delete" asp-route-id="@item.ServicoId" class="text-danger text-decoration-none btn btn-outline-danger">Delete</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
