--- a/ProjetoBackend/Views/Vendas/Edit.cshtml
+++ b/ProjetoBackend/Views/Vendas/Edit.cshtml
@@ -1,65 +1,65 @@
 ﻿@model ProjetoBackend.Models.Venda
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
+<div class="container">
 
-<h1>Editar Vendas</h1>
+    <h1>Editar Vendas</h1>
 
-<hr />
-<div class="row  justify-content-center" ">
-    <div class="col-md-8>
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="VendaId" />
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
+    <hr />
+    <div class="row justify-content-center" ">
+        <div class="col-md-8>
+            <form asp-action="Edit">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="VendaId" />
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
 
-                    <div class="form-group">
-                        <label asp-for="NotaFiscal" class="control-label"></label>
-                        <input asp-for="NotaFiscal" class="form-control" />
-                        <span asp-validation-for="NotaFiscal" class="text-danger"></span>
+                        <div class="form-group">
+                            <label asp-for="NotaFiscal" class="control-label"></label>
+                            <input asp-for="NotaFiscal" class="form-control" />
+                            <span asp-validation-for="NotaFiscal" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="col-12 col-md-8 mt-2"></div>
+                        <div class="form-group">
+                            <label asp-for="ClienteId" class="control-label"></label>
+                            <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
+                            <span asp-validation-for="ClienteId" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="col-12 col-md-8 mt-2"></div>
-                    <div class="form-group">
-                        <label asp-for="ClienteId" class="control-label"></label>
-                        <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-                        <span asp-validation-for="ClienteId" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md-8 mt-2">
+                        <div class="form-group">
+                            <label asp-for="DataVenda" class="control-label"></label>
+                            <input asp-for="DataVenda" class="form-control" />
+                            <span asp-validation-for="DataVenda" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <label asp-for="ValorTotal" class="control-label"></label>
+                            <input asp-for="ValorTotal" class="form-control" />
+                            <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-8 mt-2">
-                    <div class="form-group">
-                        <label asp-for="DataVenda" class="control-label"></label>
-                        <input asp-for="DataVenda" class="form-control" />
-                        <span asp-validation-for="DataVenda" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                        <a asp-action="Index" class="text-danger text-decoration-none btn btn-outline-danger w-100">Cancelar</a>
+                    </div>
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col-12 col-md mt-2">
+                        <div class="form-group">
+                            <input type="submit" value="Salvar" class="btn btn-primary w-100" />
+                        </div>
                     </div>
                 </div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <label asp-for="ValorTotal" class="control-label"></label>
-                        <input asp-for="ValorTotal" class="form-control" />
-                        <span asp-validation-for="ValorTotal" class="text-danger"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md mt-2">
-                    <div class="btn btn-outline-danger w-100">
-                        <a asp-action="Index" class="text-danger text-decoration-none">Cancelar</a>
-                    </div>
-                </div>
-                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-                <div class="col-12 col-md mt-2">
-                    <div class="form-group">
-                        <input type="submit" value="Salvar" class="btn btn-primary w-100" />
-                    </div>
-                </div>
-            </div>
-        </form>
+            </form>
+        </div>
     </div>
 </div>
 @section Scripts {
