--- a/ProjetoBackend/Views/Vendas/Index.cshtml
+++ b/ProjetoBackend/Views/Vendas/Index.cshtml
@@ -3,64 +3,57 @@
 @{
     ViewData["Title"] = "Vendas";
 }
+<div class="container">
 
-<h1>Vendas</h1>
+    <h1>Vendas</h1>
 
-<p>
-    <div class="btn btn-lg" style=" background:#DC5F00">
-        <a asp-action="Create" class="text-decoration-none text-light">Cadastrar</a>
-    </div>
-</p>
-<table class="table table-dark table-responsive">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.NotaFiscal)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cliente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DataVenda)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ValorTotal)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <p>
+        <div class="">
+            <a asp-action="Create" class="text-decoration-none text-light btn btn-lg btn-1">Cadastrar</a>
+        </div>
+    </p>
+    <table class="table table-dark table-responsive">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NotaFiscal)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cliente.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DataVenda)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ValorTotal)
-                </td>
-                <td>
-                    <div class="btn btn-outline-info">
-                        <a asp-controller="ItensVendas" asp-action="Index" asp-route-id="@item.VendaId" class="text-info text-decoration-none">Produtos</a>
-                    </div>
-                    <div class="btn btn-outline-success">
-                        <a asp-controller="ServicosVendas" asp-action="Index" asp-route-id="@item.VendaId" class="text-success text-decoration-none">Serviços</a>
-                    </div>
-                    <div class=" btn btn-outline-primary">
-                        <a asp-action="Edit" asp-route-id="@item.VendaId" class="text-primary text-decoration-none">Editar</a>
-                    </div>
-
-                    <div class="btn btn-outline-danger">
-                        <a asp-action="Delete" asp-route-id="@item.VendaId" class="text-danger text-decoration-none">Delete</a>
-                    </div>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.NotaFiscal)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Cliente)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DataVenda)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.ValorTotal)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NotaFiscal)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cliente.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DataVenda)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ValorTotal)
+                    </td>
+                    <td>
+                        <a asp-controller="ItensVendas" asp-action="Index" asp-route-id="@item.VendaId" class="text-info text-decoration-none btn btn-outline-info">Produtos</a>
+                        <a asp-controller="ServicosVendas" asp-action="Index" asp-route-id="@item.VendaId" class="text-success text-decoration-none btn btn-outline-success">Serviços</a>
+                        <a asp-action="Edit" asp-route-id="@item.VendaId" class="text-primary text-decoration-none btn btn-outline-primary">Editar</a>
+                        <a asp-action="Delete" asp-route-id="@item.VendaId" class="text-danger text-decoration-none btn btn-outline-danger">Deletar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
