--- a/ProjetoBackend/Views/Home/Index.cshtml
+++ b/ProjetoBackend/Views/Home/Index.cshtml
@@ -5,7 +5,13 @@
 
     <div class="text-center">
         <h1 class="display-4">ProtMind</h1>
-        <p>Conheça o futuro com o ProtMind com controle total sob seus movimentos em jogos digitais </p>
+        <p>Conheça o futuro com o ProtMind com maior conforto em jogos digitais.</p>
+        <h4>
+            <p>
+                Possos produtos possuem a maior qualidade do mercado!
+            </p>
+        </h4>
+        <div class="">dentre eles:</div>
 
     </div>
 </div>
