--- a/ProjetoBackend/Views/Home/Index.cshtml
+++ b/ProjetoBackend/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
         <p>Conheça o futuro com o ProtMind com maior conforto em jogos digitais.</p>
         <h4>
             <p>
-                Possos produtos possuem a maior qualidade do mercado!
+                Nossos produtos possuem a maior qualidade do mercado!
             </p>
         </h4>
-        <div class="">dentre eles:</div>
+        <div class="">dentre as categorias temos:</div>
 
     </div>
 </div>
