--- a/ProjetoBackend/Views/Home/Index.cshtml
+++ b/ProjetoBackend/Views/Home/Index.cshtml
@@ -11,7 +11,76 @@
                 Nossos produtos possuem a maior qualidade do mercado!
             </p>
         </h4>
-        <div class="">dentre as categorias temos:</div>
-
+    </div>
+    <div class="text-start">
+        <div class="mt-5">Dentre as categorias temos:</div>
+        <li class="m-3">
+            Armazenamento;
+        </li>
+        <li class="m-3">
+            Periféricos;
+        </li>
+        <li class="m-3">
+            Aparelhos Celulares;
+        </li>
+        <li class="m-3">
+            Processadores.
+        </li>
+        E muito mais!!
+    </div>
+    <h3 class="col-12 col-md-7 mt-3"> A nossa empresa busca trazer o melhor dos produtos para vocês, juntando qualidade e custo benefício.</h3>
+    <p class="mt-3 fs-4 text-center">abaixo alguns de nossos melhores produtos a custo benefício</p>
+    <div class="d-sm-inline d-md-flex">
+        <div class="col-12 col-md-4 bg-black m-2 rounded">
+            <img class=" m-3 max" src="~/Img/ssd.jpg" />
+            <div class="m-3">
+                <h4>SSD SATA III 960gb</h4>
+                <h5>
+                    <p class="text-success">R$340,00</p>
+                </h5>
+            </div>
+            <h5 class="justify-content-end">
+                <p class="text-end">
+                    Confira
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8" />
+                    </svg>
+                </p>
+            </h5>
+        </div>
+        <div class="col-12 col-md-4 bg-black m-2 rounded">
+            <img class="m-3 max" src="~/img/iphone-16.jpg" />
+            <div class="m-3">
+                <h4>Iphone 16</h4>
+                <h5>
+                    <p class="text-success">R$9800,00</p>
+                </h5>
+            </div>
+            <h5 class="justify-content-end">
+                <p class="text-end">
+                    Confira
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8" />
+                    </svg>
+                </p>
+            </h5>
+        </div>
+        <div class="col-12 col-md-4 bg-black m-2 rounded">
+            <img class="m-3 max" src="~/img/hyperx-product-line.jpg" />
+            <div class="m-3">
+                <h4>Kit Periféricos Hyper X</h4>
+                <h5>
+                    <p class="text-success">230,99</p>
+                </h5>
+            </div>
+            <h5 class="">
+                <p class="text-end align-items-end">
+                    Confira
+                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-right-short" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M4 8a.5.5 0 0 1 .5-.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5A.5.5 0 0 1 4 8" />
+                    </svg>
+                </p>
+            </h5>
+        </div>
     </div>
 </div>
