--- a/ProjetoBackend/Views/Shared/_LoginPartial.cshtml
+++ b/ProjetoBackend/Views/Shared/_LoginPartial.cshtml
@@ -50,11 +50,11 @@
     else
     {
 
-        <li>
-            <a class="nav-link text-light nav-item btn pt-0 pb-0 btn-2" asp-area="Identity" asp-page="/Account/Register">Cadastrar</a>
+        <li class="nav-item btn pt-0 pb-0 btn-2">
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Cadastrar</a>
         </li>
-        <li>
-            <a class="nav-link text-light nav-item btn pt-0 pb-0 btn-1" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <li class="nav-item btn pt-0 pb-0 btn-1">
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
 
     }
