--- a/ProjetoBackend/Views/ItensVendas/Edit.cshtml
+++ b/ProjetoBackend/Views/ItensVendas/Edit.cshtml
@@ -7,48 +7,69 @@
 
     <h1>Editar</h1>
 
-    <h4>ItemVenda</h4>
+    <h4>Item da Venda</h4>
     <hr />
-    <div class="row">
-        <div class="col-md-4">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
             <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ItemVendaId" />
-                <div class="form-group">
-                    <label asp-for="VendaId" class="control-label"></label>
-                    <select asp-for="VendaId" class="form-control" asp-items="ViewBag.VendaId"></select>
-                    <span asp-validation-for="VendaId" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="VendaId" class="control-label"></label>
+                            <select asp-for="VendaId" class="form-control" asp-items="ViewBag.VendaId"></select>
+                            <span asp-validation-for="VendaId" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ProdutoId" class="control-label"></label>
+                            <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
+                            <span asp-validation-for="ProdutoId" class="text-danger"></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="ProdutoId" class="control-label"></label>
-                    <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
-                    <span asp-validation-for="ProdutoId" class="text-danger"></span>
+                <div class="row">
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="Quantidade" class="control-label"></label>
+                            <input asp-for="Quantidade" class="form-control" />
+                            <span asp-validation-for="Quantidade" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ValorUnitario" class="control-label"></label>
+                            <input asp-for="ValorUnitario" class="form-control" />
+                            <span asp-validation-for="ValorUnitario" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ValorTotal" class="control-label"></label>
+                            <input asp-for="ValorTotal" class="form-control" />
+                            <span asp-validation-for="ValorTotal" class="text-danger"></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Quantidade" class="control-label"></label>
-                    <input asp-for="Quantidade" class="form-control" />
-                    <span asp-validation-for="Quantidade" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ValorUnitario" class="control-label"></label>
-                    <input asp-for="ValorUnitario" class="form-control" />
-                    <span asp-validation-for="ValorUnitario" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="ValorTotal" class="control-label"></label>
-                    <input asp-for="ValorTotal" class="form-control" />
-                    <span asp-validation-for="ValorTotal" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                <div class="row">
+                    <div class="col-12 col-md mt-2">
+                        <div class="btn w-100 btn-outline-danger">
+                            <a asp-action="Index" class="text-decoration-none text-danger ">Cancelar</a>
+                        </div>
+                    </div>
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col col-md mt-2">
+
+                        <div class="form-group">
+                            <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                        </div>
+                    </div>
                 </div>
             </form>
         </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
