--- a/ProjetoBackend/Views/ItensVendas/Index.cshtml
+++ b/ProjetoBackend/Views/ItensVendas/Index.cshtml
@@ -9,7 +9,7 @@
     <h1>Vendas</h1>
 
     <p>
-        <a asp-action="Create" class="text-decoration-none text-light btn btn-lg btn-1">Cadastrar</a>
+        <a asp-action="Create" class="text-decoration-none text-light btn btn-lg btn-1" asp-route-id=@idVendaAtual>Adicionar Produto</a>
     </p>
     <table class="table table-dark table-responsive">
         <thead>
@@ -37,7 +37,7 @@
             {
                 <tr>
                     <td>
-                        @Html.DisplayFor(modelItem => item.Venda.VendaId)
+                        @Html.DisplayFor(modelItem => item.Venda.NotaFiscal)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Produto.Nome)
