--- a/ProjetoBackend/Views/Categorias/Edit.cshtml
+++ b/ProjetoBackend/Views/Categorias/Edit.cshtml
@@ -30,7 +30,7 @@
                     <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
                     <div class="col-12 col-md mt-2">
                         <div class="form-group">
-                            <input type="submit" value="Save" class="btn btn-outline-primary w-100" />
+                            <input type="submit" value="Salvar" class="btn btn-outline-primary w-100" />
                         </div>
                     </div>
                 </div>
