--- a/ProjetoBackend/Views/Clientes/Index.cshtml
+++ b/ProjetoBackend/Views/Clientes/Index.cshtml
@@ -17,9 +17,7 @@
     </div>
 
     <p>
-        <div class="btn btn-lg btn-1">
-            <a asp-action="Create" class=" text-light text-decoration-none">Cadastrar</a>
-        </div>
+        <a asp-action="Create" class=" text-light text-decoration-none btn btn-lg btn-1">Cadastrar</a>
     </p>
     <table class="table table-responsive table-dark table-striped">
         <thead>
