--- a/ProjetoBackend/Views/Compras/Edit.cshtml
+++ b/ProjetoBackend/Views/Compras/Edit.cshtml
@@ -43,7 +43,7 @@
                     <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
                     <div class="col col-md mt-2">
                         <div class="form-group">
-                            <input type="submit" value="Criar" class="btn btn-primary w-100" />
+                            <input type="submit" value="Salvar" class="btn btn-primary w-100" />
                         </div>
                     </div>
                 </div>
