--- a/ProjetoBackend/Views/ItensCompras/Create.cshtml
+++ b/ProjetoBackend/Views/ItensCompras/Create.cshtml
@@ -2,40 +2,53 @@
 
 @{
     ViewData["Title"] = "Create";
+    var idCompraAtual = ViewData["idCompraAtual"];
 }
+<div class="container">
 
-<h1>Create</h1>
 
-<h4>ItemCompra</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CompraId" class="control-label"></label>
-                <select asp-for="CompraId" class ="form-control" asp-items="ViewBag.CompraId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProdutoId" class="control-label"></label>
-                <select asp-for="ProdutoId" class ="form-control" asp-items="ViewBag.ProdutoId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Quantidade" class="control-label"></label>
-                <input asp-for="Quantidade" class="form-control" />
-                <span asp-validation-for="Quantidade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+    <h1>Criar</h1>
+
+
+    <hr />
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <form asp-action="Create" asp-route-id="@idCompraAtual">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="row">
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="ProdutoId" class="control-label"></label>
+                            <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md">
+                        <div class="form-group">
+                            <label asp-for="Quantidade" class="control-label"></label>
+                            <input asp-for="Quantidade" class="form-control" />
+                            <span asp-validation-for="Quantidade" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <input asp-for="CompraId" type="hidden" class="form-control" value=@idCompraAtual />
+
+                <div class="row">
+
+                    <div class="col-12 col-md mt-2">
+                        <input type="submit" value="criar" class="btn btn-danger w-100" />
+                    </div>
+                    <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                    <div class="col col-md mt-2">
+                        <a asp-action="Index" class="text-decoration-none text-light btn btn-primary w-100">voltar</a>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
