--- a/ProjetoBackend/Views/ItensCompras/Delete.cshtml
+++ b/ProjetoBackend/Views/ItensCompras/Delete.cshtml
@@ -1,55 +1,55 @@
 ﻿@model ProjetoBackend.Models.ItemCompra
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Deletar";
 }
+<div class="container">
 
-<h1>Delete</h1>
+    <h1>Deletar</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>ItemCompra</h4>
-    <hr />
-    <dl class="row">
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.Compra)
-            </dt>
-            <dd class="col-12 col-md-2">
-                @Html.DisplayFor(model => model.Compra.CompraId)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.Produto)
-            </dt>
-            <dd class="col-12 col-md-2">
-                @Html.DisplayFor(model => model.Produto.Nome)
-            </dd>
-        </div>
-        <div class="row justify-content-evenly">
-            <dt class="col-12 col-md-2">
-                @Html.DisplayNameFor(model => model.Quantidade)
-            </dt>
-            <dd class="col-12 col-md-2">
-                @Html.DisplayFor(model => model.Quantidade)
-            </dd>
-        </div>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ItemCompraId" />
-        <div class="row">
-
-            <div class="col-12 col-md mt-2">
-                <input type="submit" value="Delete" class="btn btn-danger w-100" />
+    <div>
+        <h4>ItemCompra</h4>
+        <hr />
+        <dl class="row">
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.Compra)
+                </dt>
+                <dd class="col-12 col-md-2">
+                    @Html.DisplayFor(model => model.Compra.CompraId)
+                </dd>
             </div>
-            <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
-            <div class="col col-md mt-2">
-                <div class="btn btn-primary w-100">
-                    <a asp-action="Index" class="text-decoration-none text-light">voltar</a>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.Produto)
+                </dt>
+                <dd class="col-12 col-md-2">
+                    @Html.DisplayFor(model => model.Produto.Nome)
+                </dd>
+            </div>
+            <div class="row justify-content-evenly">
+                <dt class="col-12 col-md-2">
+                    @Html.DisplayNameFor(model => model.Quantidade)
+                </dt>
+                <dd class="col-12 col-md-2">
+                    @Html.DisplayFor(model => model.Quantidade)
+                </dd>
+            </div>
+        </dl>
+
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="ItemCompraId" />
+            <div class="row">
+
+                <div class="col-12 col-md mt-2">
+                    <input type="submit" value="Delete" class="btn btn-danger w-100" />
+                </div>
+                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                <div class="col col-md mt-2">
+                    <a asp-action="Index" class="text-decoration-none text-light btn btn-primary w-100">voltar</a>
                 </div>
             </div>
-        </div>
-    </form>
+        </form>
+    </div>
+
 </div>
