--- a/ProjetoBackend/Views/ItensCompras/Edit.cshtml
+++ b/ProjetoBackend/Views/ItensCompras/Edit.cshtml
@@ -1,44 +1,54 @@
 ﻿@model ProjetoBackend.Models.ItemCompra
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
 
-<h4>ItemCompra</h4>
+<h4>Item da Compra</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ItemCompraId" />
-            <div class="form-group">
-                <label asp-for="CompraId" class="control-label"></label>
-                <select asp-for="CompraId" class="form-control" asp-items="ViewBag.CompraId"></select>
-                <span asp-validation-for="CompraId" class="text-danger"></span>
+            <div class="row">
+                <input asp-for="CompraId" class="form-control" type="hidden" asp-items="ViewBag.CompraId" />
+
+                <div class="col-12 col-md">
+                    <div class="form-group">
+                        <label asp-for="ProdutoId" class="control-label"></label>
+                        <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
+                        <span asp-validation-for="ProdutoId" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-12 col-md">
+                    <div class="form-group">
+                        <label asp-for="Quantidade" class="control-label"></label>
+                        <input asp-for="Quantidade" class="form-control" />
+                        <span asp-validation-for="Quantidade" class="text-danger"></span>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ProdutoId" class="control-label"></label>
-                <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
-                <span asp-validation-for="ProdutoId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Quantidade" class="control-label"></label>
-                <input asp-for="Quantidade" class="form-control" />
-                <span asp-validation-for="Quantidade" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="row">
+                <div class="col-12 col-md mt-2">
+                    <a asp-action="Index" class="text-danger text-decoration-none btn btn-outline-danger w-100">Cancelar</a>
+                </div>
+                <div class="d-sm-none d-md-block col-md-3 mt-2"></div>
+                <div class="col-12 col-md mt-2">
+                    <div class="form-group">
+                        <input type="submit" value="Salvar" class="btn btn-outline-primary w-100" />
+                    </div>
+                </div>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
