--- a/ProjetoBackend/Views/ItensCompras/Index.cshtml
+++ b/ProjetoBackend/Views/ItensCompras/Index.cshtml
@@ -2,48 +2,44 @@
 
 @{
     ViewData["Title"] = "Index";
+    var idCompraAtual = ViewData["idCompraAtual"];
 }
+<div class="container">
 
-<h1>Index</h1>
+    <h1>Tabela item da compra</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Compra)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Produto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantidade)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <p>
+        <a asp-action="Create" class=" text-light text-decoration-none btn btn-lg btn-1" asp-route-id="@idCompraAtual">Adicionar</a>
+    </p>
+    <table class="table table-responsive table-dark table-striped">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Compra.CompraId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Produto.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantidade)
-                </td>
-                <td>
-                    <a asp-controller="ItensCompras" asp-action="Index" asp-route-id="@item.CompraId">Itens da Venda</a> |
-                    <a asp-action="Edit" asp-route-id="@item.ItemCompraId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.ItemCompraId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.ItemCompraId">Delete</a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Produto)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Quantidade)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Produto.Nome)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Quantidade)
+                    </td>
+                    <td>
+                        <a asp-action="Edit" class="text-decoration-none text-primary btn btn-outline-primary" asp-route-id="@item.ItemCompraId">Editar</a> |
+                        <a asp-action="Delete" class="text-danger text-decoration-none btn btn-outline-danger" asp-route-id="@item.ItemCompraId">Deletar</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+</div>
